--- a/notebooks/Advection.ipynb
+++ b/notebooks/Advection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Advection\n",
+    "# Linear Advection\n",
     "\n",
     "In this notebook, we will explore the first-order upwind scheme for the advection equation.\n",
     "\n",
@@ -59,9 +59,9 @@
     "        for i in range(n):\n",
     "            # Enforce periodic boundary condition at x=0\n",
     "            if i == 0:\n",
-    "                ut[i] = u[i] - a*dt/dx*(u[i]-u[n-1])\n",
+    "                ut[i] = u[i] - a*dt/dx*(u[i] - u[n - 1])\n",
     "            else:\n",
-    "                ut[i] = u[i] - a*dt/dx*(u[i]-u[i-1])\n",
+    "                ut[i] = u[i] - a*dt/dx*(u[i] - u[i - 1])\n",
     "\n",
     "        u[:] = ut[:]\n",
     "        t += dt\n",
@@ -164,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now it's time to write your own code for a central advection scheme."
+    "Now it's time to write your own code for a central advection scheme. Repeat the exercise described for the first-order advection using ``dt=0.00001``. What can you observe?"
    ]
   },
   {
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
