--- a/notebooks/Burgers.ipynb
+++ b/notebooks/Burgers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inviscid Burgers\n",
+    "# Inviscid Burgers\n",
     "\n",
     "In this notebook, we will explore the first-order upwind scheme for the burgers equation.\n",
     "\n",
@@ -139,33 +139,6 @@
     "# You may use a for loop. \n",
     "# Note that the figure will be updated above."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create a new figure. You can now play around by testing different initial conditions. For example ``sin(2*np.pi*x)**2``"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(1)\n",
-    "plt.xlabel('$x$')\n",
-    "plt.ylabel('$u(x,t)$')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your own Burgers code with different initial conditions"
-   ]
   }
  ],
  "metadata": {
@@ -184,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
