--- a/notebooks/Diffusion.ipynb
+++ b/notebooks/Diffusion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Linear Diffusion\n",
+    "# Linear Diffusion\n",
     "\n",
     "In this notebook, we will explore the second-order central scheme for the linear diffusion equation.\n",
     "\n",
