--- a/notebooks/Getting started.ipynb
+++ b/notebooks/Getting started.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting started\n",
+    "# Getting started\n",
     "\n",
     "In this notebook, we will get started with the Jupyter notebooks and will explore some fundamental Python functions and statements, which will be useful for the relevant coding in this course.\n",
     "\n",
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numbers = [-1, 8, -4, 5, 6, 8, 1, 0, 5, 5]"
+    "numbers = [-1, 8, -4, 5, 6, 8, 1, 10, 5, 5]"
    ]
   },
   {
@@ -48,19 +48,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = 0\n",
     "for number in numbers:\n",
@@ -78,19 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total = 0\n",
     "for number in numbers:\n",
@@ -113,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,10 +122,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib notebook\n",
     "import numpy as np\n",
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt"
@@ -156,12 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "number = 81\n",
-    "result = np.sqrt(number)"
+    "result = np.sqrt(number)\n",
+    "print(result)"
    ]
   },
   {
@@ -192,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,20 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.0, 2.0, 4.0)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "vec1[0], vec1[2], vec1[4]"
    ]
@@ -239,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,53 +233,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.20544129, 0.21388956, 0.7703515 , 0.92768811, 0.78552326,\n",
-       "        0.14913252, 0.80772225, 0.71967022, 0.44323799, 0.80020939],\n",
-       "       [0.18870998, 0.09648724, 0.77803358, 0.34098545, 0.45587911,\n",
-       "        0.22906041, 0.76240718, 0.55715494, 0.9410092 , 0.8299019 ],\n",
-       "       [0.24679514, 0.58822126, 0.68044615, 0.22881779, 0.12414627,\n",
-       "        0.67745088, 0.04762389, 0.04852383, 0.86368705, 0.14365675],\n",
-       "       [0.14549557, 0.8990288 , 0.9331061 , 0.35945606, 0.76027303,\n",
-       "        0.20032365, 0.08838841, 0.00739851, 0.6149887 , 0.86737212],\n",
-       "       [0.21031502, 0.32748385, 0.68840376, 0.08813859, 0.19555493,\n",
-       "        0.59448497, 0.88784091, 0.35873263, 0.09734105, 0.20854743]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R * B                         # Elementwise multiplication Dij = Rij*Bij"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5.82286609, 5.82286609, 5.82286609, 5.82286609, 5.82286609],\n",
-       "       [5.17962899, 5.17962899, 5.17962899, 5.17962899, 5.17962899],\n",
-       "       [3.64936902, 3.64936902, 3.64936902, 3.64936902, 3.64936902],\n",
-       "       [4.87583094, 4.87583094, 4.87583094, 4.87583094, 4.87583094],\n",
-       "       [3.65684313, 3.65684313, 3.65684313, 3.65684313, 3.65684313]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "R @ B.T                       # Matrix multiplication. Dimensions must be right, use .T for transpose"
    ]
@@ -318,26 +258,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "np.sin(2*np.pi*A)"
    ]
@@ -349,9 +274,7 @@
     "#### Exercises\n",
     "1. Create a vector of ones called ``v1`` with length 10\n",
     "2. Create a vector of even numbers called ``v2`` starting at 0 with the same length of ``v1``\n",
-    "3. Compute the inner and outer product of these two vectors. \n",
-    "    1. The inner product of two column vectors can be written $\\vec v_1^T \\cdot \\vec v_2$\n",
-    "    2. The outer product of two column vectors can be written $\\vec v_1 \\cdot \\vec v_2^T$"
+    "3. Compute the elementwise and dot product of these two vectors."
    ]
   },
   {
@@ -366,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,25 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\cos{\\left(1 \\right)} + 3.5$"
-      ],
-      "text/plain": [
-       "cos(1) + 3.5"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fder.subs(x, 1)"
    ]
@@ -469,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
