--- a/notebooks/Iterative Methods.ipynb
+++ b/notebooks/Iterative Methods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iterative Methods\n",
+    "# Iterative Methods for Linear and Nonlinear Systems\n",
     "\n",
     "In this notebook, we will implement Jacobi and Gauss-Seidel iterative methods. Then, we will use them to approximate the solution of the implicit scheme for the Burgers equation.\n",
     "\n",
@@ -373,9 +373,9 @@
     "    A = np.zeros((n, n))\n",
     "    for i in range(n):\n",
     "        # Diagonal entries\n",
-    "        A[i, i] = 1 + dt/dx*u[i]\n",
+    "        A[i, i] = \n",
     "        # Off-diagonal entries\n",
-    "        A[i, i - 1] = -dt/dx*u[i - 1]\n",
+    "        A[i, i - 1] = \n",
     "    return A"
    ]
   },
@@ -477,29 +477,7 @@
     "\n",
     "# Advance nonlinear problem\n",
     "for i in range(niter):\n",
-    "    u = newton_raphson(u, dt, dx, n, ktol)\n",
-    "\n",
-    "# Plot solution\n",
-    "plt.plot(x, u, label='inv')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Observe the resulting wall time and increase the number of cells to ``n = 200`` and then to ``n = 400``. How significant is the time increase? \n",
-    "\n",
-    "Clearly, using ``inv`` in ``newton_raphson`` is slowing down the simulation. We can significantly speed up the computations by using instead an iterative solver for the linearized system."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Putting it all together\n",
-    "\n",
-    "In this subsection, we will illustrate the benefit of using Jacobi to speed up the resolution of the Implicit Burgers problem. To do that, we will write a similar function to ``newton_raphson``, called ``newton_raphson_jacobi``, where we now include the Jacobi iterative method."
+    "    u = newton_raphson(u, dt, dx, n, ktol)"
    ]
   },
   {
@@ -508,90 +486,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def newton_raphson_jacobi(u0, dt, dx, n, ktol, kmax=200):\n",
-    "    # Initialize variables\n",
-    "    error = 1e16\n",
-    "    \n",
-    "    # Initialize solution at current time-step\n",
-    "    uk = 1.0*u0\n",
-    "    k = 0\n",
-    "    \n",
-    "    # Define initial guess (vector of zeros)\n",
-    "    x0 = \n",
-    "    \n",
-    "    # Define gauss_seidel tolerance\n",
-    "    tol = 1e-12\n",
-    "    while (error > ktol) and (k < kmax):\n",
-    "        # Obtain residual at k-th iteration\n",
-    "        rk = residual(uk, dx)\n",
-    "        \n",
-    "        # Build RHS vector\n",
-    "        b = -(uk - u0) + dt*rk \n",
-    "        \n",
-    "        # Compute Jacobian at k-th iteration\n",
-    "        Ak = \n",
-    "\n",
-    "        # Solve linearized system using Jacobi\n",
-    "        du = \n",
-    "        \n",
-    "        # Obtain solution at k+1-th iteration\n",
-    "        ukk =\n",
-    "\n",
-    "        # Compute error from Newton method\n",
-    "        error = np.max(np.abs(ukk-uk))\n",
-    "        \n",
-    "        # Move on to next iteration\n",
-    "        uk = ukk\n",
-    "        k += 1\n",
-    "        \n",
-    "    uf = ukk\n",
-    "    return uf"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, run the same problem described above and time it. This time, use ``newton_raphson_jacobi``."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "L = \n",
-    "n = \n",
-    "dt =\n",
-    "tf = \n",
-    "ktol = \n",
-    "\n",
-    "x = np.linspace(0, L, n)\n",
-    "dx = L/n\n",
-    "niter = int(tf/dt)\n",
-    "\n",
-    "# Initialize solution\n",
-    "u = \n",
-    "\n",
-    "# Advance nonlinear problem\n",
-    "for j in range(niter):\n",
-    "    u = newton_raphson_jacobi(u, dt, dx, n, ktol)\n",
-    "\n",
     "# Plot solution\n",
-    "plt.plot(x, u, label='Jacobi')\n",
-    "plt.legend()"
+    "plt.plot(x, u)\n",
+    "plt.xlabel('$x$')\n",
+    "plt.ylabel('$u$')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How much faster/slower is the simulation now? Is there any benefit in using Jacobi iteration?\n",
-    "Compare results using ``n = 100, 200, 400``.\n",
-    "\n",
-    "- A more \"appropriate\" way to time these cells is by using instead the magic function ``%%timeit``. It will run the cell several time and obtain a standard deviation."
+    "Observe the resulting wall time and increase the number of cells to ``n = 200`` and then to ``n = 400``. How significant is the time increase? "
    ]
   }
  ],
