--- a/notebooks/MUSCL Schemes.ipynb
+++ b/notebooks/MUSCL Schemes.ipynb
@@ -322,8 +322,10 @@
     "## Activities\n",
     "- What are the advantages and disadvantages of increasing the order of the scheme?\n",
     "- Check whether the schemes with limiter functions are now TVD\n",
-    "- Modify the definition of ``residual`` to use a Riemann solver of the form $F(u_L, u_R)$. To achieve this, implement a function named ``riemann_solver`` and compute the ``dr`` slopes at each interface. Templates are provided below.\n",
-    "- Rewrite ``riemann_solver`` using a Roe solver for the Burgers equation."
+    "- Modify the definition of ``residual`` to use a Riemann solver of the form $F(u_L, u_R)$. To achieve this, we have implemented a function named ``riemann_solver``. Complete the code to ompute the ``dr`` slopes at each interface. Templates are provided below.\n",
+    "- Note: \n",
+    "    - Additional ``if`` statements need to be added to enforce periodic boundary conditions to compute ``ur`` and ``dr``.\n",
+    "    - For linear advection, the Riemann solver is expected to return only ``ul``."
    ]
   },
   {
@@ -333,7 +335,7 @@
    "outputs": [],
    "source": [
     "def riemann_solver(ul, ur):\n",
-    "    # Complete Riemann solver definition here\n",
+    "    return ul\n",
     "    \n",
     "def residual(u, a, dx):\n",
     "    res = 0.0*u\n",
@@ -371,6 +373,38 @@
     "        \n",
     "        res[i] = -(fR - fL)/dx\n",
     "    return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rewrite ``riemann_solver`` so that it uses a Roe solver for the Burgers equation. Then, run the following cell to see your implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100\n",
+    "L = 1.0\n",
+    "dt = 0.001\n",
+    "tf = 0.5\n",
+    "\n",
+    "# Calculate mesh spacing and grid points\n",
+    "dx = L/n \n",
+    "x = np.arange(0, L, dx)\n",
+    "\n",
+    "# Define limiter to use\n",
+    "limiter = minmod\n",
+    "\n",
+    "u0 = np.exp(-40 * (x - 1/2)**2)\n",
+    "u_burgers = advance_solution(u0, 1, dx, dt, tf) \n",
+    "\n",
+    "plt.figure()\n",
+    "plt.plot(x, u_burgers)"
    ]
   }
  ],
