--- a/notebooks/Sod's Shock-Tube Problem.ipynb
+++ b/notebooks/Sod's Shock-Tube Problem.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sod's Shock-Tube Problem\n",
+    "# Sod's Shock-Tube Problem\n",
     "\n",
     "In this notebook, we will explore the Riemann solver of Roe to solve Sod's Shock-Tube Problem and the use of limiters when a MUSCL-reconstructed stencil is used.\n",
     "\n",
@@ -233,7 +233,7 @@
    "metadata": {},
    "source": [
     "Consider a grid with\n",
-    "- ``n=100``\n",
+    "- ``n=50``\n",
     "- ``L=1.0``"
    ]
   },
