--- a/notebooks/Taylor Series.ipynb
+++ b/notebooks/Taylor Series.ipynb
@@ -174,7 +174,7 @@
    "metadata": {},
    "source": [
     "Why do only odd-powered terms appear in ``fn`` in our original example? Repeat the procedure above\n",
-    "using a different expansion point, such as $x=\\dfrac{\\pi}{4}$."
+    "using a different expansion point, such as $a=\\dfrac{\\pi}{4}$."
    ]
   },
   {
@@ -201,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
