--- a/notebooks/Von Neumann.ipynb
+++ b/notebooks/Von Neumann.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Von Neumann Analysis\n",
+    "# Von Neumann Analysis\n",
     "\n",
     "In this notebook, we will explore the spectral properties of advection schemes.\n",
     "\n",
@@ -191,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
