--- a/notebooks/Chaos.ipynb
+++ b/notebooks/Chaos.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction to Chaos\n",
+    "# Introduction to Chaos\n",
     "\n",
     "In this notebook, we will explore the logistic function.\n",
     "\n",
@@ -139,7 +139,7 @@
     "\n",
     "Find the four values of $x$ to which the solution converges if we use\n",
     " - $x_0=0.1$,\n",
-    " - $a = 3.55$."
+    " - $a = 3.54$"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
