--- a/notebooks/Time-Stepping Methods.ipynb
+++ b/notebooks/Time-Stepping Methods.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Time-Stepping Methods\n",
+    "# Time-Stepping Methods\n",
     "\n",
     "In this notebook, we will explore different methods to solve ordinary differential equations. Specifically, we will implement some explicit and implicit methods to advance our spatial discretizations schemes in time.\n",
     "\n",
@@ -53,11 +53,7 @@
    "source": [
     "def residual(u, a, dx):\n",
     "    # Second-order accurate central method\n",
-    "    r = np.zeros(len(u))\n",
-    "    r[0] = u[1] - u[-1]\n",
-    "    r[1:-1] = u[2:] - u[:-2]\n",
-    "    r[-1] = u[0] - u[-2]\n",
-    "    return -0.5*r*a/dx"
+    "    return -0.5*a/dx*(np.roll(u, -1) - np.roll(u, 1))"
    ]
   },
   {
@@ -125,13 +121,13 @@
     "    t = 0\n",
     "    while t < tf:\n",
     "        # Compute residual R(u)\n",
-    "        r = advection_central(ut, a, dx)\n",
+    "        r = residual(ut, a, dx)\n",
     "        \n",
     "        # Compute solution ũ at dt/2\n",
     "        um = ut + 0.5*dt*r\n",
     "        \n",
     "        # Compute residual corresponding to ũ\n",
-    "        rm = advection_central(um, a, dx)\n",
+    "        rm = residual(um, a, dx)\n",
     "        \n",
     "        # Computer solution at t+Δt\n",
     "        uf = ut + 1.0*dt*rm\n",
@@ -161,6 +157,13 @@
     "plt.figure()\n",
     "plt.plot(x, uf, label=\"Midpoint Method\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, run the simulation until ``tf=6.0``. What behaviour do you observe?"
    ]
   },
   {
@@ -215,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Choose a suitable time-step size, and plot the solution"
+    "Using a time-step size ``t=0.01``, run the simulation until ``tf=1.0``."
    ]
   },
   {
@@ -229,6 +232,13 @@
     "plt.figure()\n",
     "plt.plot(x, uf, label=\"RK4\")\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the fourth-order spatial scheme using both time-stepping methods and``dt=0.01, 0.005`` until times ``tf=1.0`` and ``tf=2.0``. Comment on the results."
    ]
   }
  ],
